--- a/pom.xml
+++ b/pom.xml
@@ -71,6 +71,10 @@
         	<artifactId>mockito-core</artifactId>
         	<scope>test</scope>
     	</dependency>
+		<dependency>
+			<groupId>com.fasterxml.jackson.datatype</groupId>
+			<artifactId>jackson-datatype-jdk8</artifactId>
+		</dependency>
 	</dependencies>
 
 	<build>
