--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,6 +13,6 @@ spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 
 spring.datasource.hikari.auto-commit=false
 
-logging.level.com.familymenu_restapi=INFO
-logging.pattern.console=%d{yyyy-MM-dd HH:mm:ss} - %msg%n
-logging.file.path=logs/
+logging.level.root=INFO
+logging.level.org.springframework.web=DEBUG
+logging.level.org.petprojec.familymenu_restapi=INFO
